--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UFT-8">
+        <meta source="viewport" content="width=device-width, scale=1.0">
+        <title>Portfolio</title>
+        <link rel="stylesheet" href="./assets/style.css">
+    </head>
+    <body>
+        <nav>
 
+        </nav>
+        <header>
+
+        </header>
+        
+        <main>
+
+        </main>
+    </body>
+</html>
