updated the h1 tag in the navigation and adde a link

--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <body>
         <nav>
             <div class="nav-h1">
-            <span>ekhay.hit</span>
-            </div>
-
+            <a href="https://github.com/ekhay-hit">ekhay.hit</a>
+    </div>
         <div class="nav-link">
             <a href="#about-me" class="link">About Me</a>
             <a href="#work" class="link">Work</a>
