--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UFT-8">
         <meta source="viewport" content="width=device-width, scale=1.0">
         <title>Portfolio</title>
+        <link rel="stylesheet" href="./assets/reset.css">
         <link rel="stylesheet" href="./assets/style.css">
     </head>
     <body>
